Add photoPurchase contract.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
     <div id="runnerTemplate" style="display: none;">
       <div class="col-sm-6 col-md-4 col-lg-3 bib">
-        <div class="panel panel-default panel-pet">
+        <div class="panel panel-default panel-pet panel-runner">
           <div class="panel-heading">
             <h3 class="panel-title">Placeholder</h3>
           </div>
