--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,13 @@
       </div>
 
       <br />
+      
+      <div class="upload_image">
+        <input type="file" id="upload-image" accept="image/jpeg" onchange="saveImage(this)">
+        <button type="button" id="upload-button">Click to Upload</button>
+      </div>
+
+      <br />
 
       <div class="row">
         <div class="col-sm-8">
